Fix: Inherit the flex gap for text-based home icon.
Previously, this scenario set the Home crumb content to `display: inline` and added margin to the label.

--- a/resources/blocks/breadcrumbs/scss/style.scss
+++ b/resources/blocks/breadcrumbs/scss/style.scss
@@ -69,18 +69,10 @@
 	// Home icon.
 	// ---------------------------------------------------------------------
 
-	&[class*=has-home-text-] &__crumb--home &__crumb-content {
+	&[class*=has-home-text-] &__crumb--home &__crumb-content::before {
+		// 🏠 default.
+		content: var( --breadcrumbs-home, "\1f3e0" );
 		display: inline-block;
-
-		&::before {
-			// 🏠 default.
-			content: var( --breadcrumbs-home, "\1f3e0" );
-			display: inline-block;
-		}
-	}
-
-	&[class*=has-home-text-] &__crumb--home &__crumb-label {
-		margin-inline-start: var( --wp--custom--x-3-p-0-breadcrumbs--gap, 0.5rem );
 	}
 
 	// Home icon.
